# wobbly

./: .gitignore  CLAUDE.md  LICENSE  README.md  core.py  extractor.py  pyproject.toml  receipts.json
data/: receipts.json
invar/: __init__.py  extractor.py  relations.py
scripts/: build_receipts.py  run_blind.py
tests/: conftest.py  test_reproduces.py
wobbly/: __init__.py  core.py  extractor.py  relations.py
wobbly.egg-info/: PKG-INFO  SOURCES.txt
