[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wobbly"
version = "0.1.0"
description = "Metamorphic testing for AI outputs — find wrong answers without an answer key"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["wobbly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
