[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wobbly"
dynamic = ["version"]
description = "Metamorphic testing for AI outputs — find wrong answers without an answer key"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tarun Agarwal", email = "tarunagarwal1981@gmail.com" }]
keywords = ["metamorphic-testing", "testing", "llm", "ai", "extraction", "qa"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/tarunagarwal1981/wobbly"
Repository = "https://github.com/tarunagarwal1981/wobbly"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
packages = ["wobbly"]

[tool.setuptools.dynamic]
version = {attr = "wobbly.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
